# cpp_project_template

./: CMakeLists.txt  README.md
src/: source.cpp  source.h
test/: test_source.cpp
